8205610: [TESTLIB] Improve listing of open file descriptors
Reviewed-by: lancea